A bunch more changes to get the whole system properly booted

--- a/external/android-emugl/host/libs/GLESv1_dec/CMakeLists.txt
+++ b/external/android-emugl/host/libs/GLESv1_dec/CMakeLists.txt
@@ -14,5 +14,11 @@ add_custom_command(
 set(SOURCES
     GLESv1Decoder.cpp)
 
+if ("${cmake_build_type_lower}" STREQUAL "debug")
+    set(OPENGL_DEBUG "-DOPENGL_DEBUG_PRINTOUT -DCHECK_GL_ERROR")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENGL_DEBUG}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENGL_DEBUG}")
+endif()
+
 add_library(GLESv1_dec ${SOURCES} ${GENERATED_SOURCES})
 target_link_libraries(GLESv1_dec OpenglCodecCommon)
