--- a/external/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/external/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -2,7 +2,7 @@ set(SOURCES
     ColorBuffer.cpp
     FbConfig.cpp
     FrameBuffer.cpp
-    NativeSubWindow_mir.cpp
+    NativeSubWindow_delegate.cpp
     ReadBuffer.cpp
     RenderContext.cpp
     RenderControl.cpp
@@ -19,9 +19,6 @@ set(SOURCES
     UnixStream.cpp
     WindowSurface.cpp)
 
-include_directories(BEFORE
-    ${MIRCLIENT_INCLUDE_DIRS})
-
 add_library(OpenglRender ${SOURCES})
 target_link_libraries(OpenglRender
     emugl_common
@@ -30,8 +27,5 @@ target_link_libraries(OpenglRender
     renderControl_dec
     OpenGLESDispatch
     OpenglCodecCommon
-    mir_support
     ${EGL_LDFLAGS}
-    ${EGL_LIBRARIES}
-    ${MIRCLIENT_LDFLAGS}
-    ${MIRCLIENT_LIBRARIES})
+    ${EGL_LIBRARIES})
