Integrate android support library into our cmake build
Just meant for integration testing. Built library is not meant to
be installed or shipped. This has to happen as part of the Android
build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,3 +90,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fPIC")
 add_subdirectory(external)
 add_subdirectory(src)
 add_subdirectory(tests)
+add_subdirectory(android)
