Refactor actual window creation into ubuntu specific namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ find_package(Threads)
 find_package(EGL REQUIRED)
 find_package(GLESv2 REQUIRED)
 
+# TODO(morphis): make mir an optional requirement so we can also add support
+# for X11, wayland, ... at a later point if needed.
 pkg_check_modules(MIRCLIENT REQUIRED mirclient)
 
 #####################################################################
