debian: add libdbus-1 build dep

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,8 @@ Build-Depends: cmake,
 # boost log needs exactly one symbol from boost-thread for resolving
 # thread-specific storage locations.
                libboost-thread-dev,
-               libdbus-cpp-dev,
+               libdbus-1-dev,
+               libdbus-cpp-dev (>= 5.0.0),
                libegl1-mesa-dev,
                libgles2-mesa-dev,
                libglib2.0-dev,
