--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,7 @@ find_package(EGL REQUIRED)
 find_package(GLESv2 REQUIRED)
 find_package(Protobuf REQUIRED)
 
-# TODO(morphis): make mir an optional requirement so we can also add support
-# for X11, wayland, ... at a later point if needed.
-pkg_check_modules(MIRCLIENT REQUIRED mirclient)
+pkg_check_modules(SDL2 sdl2)
 
 pkg_check_modules(DBUS_CPP dbus-cpp REQUIRED)
 pkg_check_modules(DBUS dbus-1 REQUIRED)
