--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -8,48 +8,117 @@ description: |
 confinement: devmode
 
 apps:
-    anbox:
-        command: usr/bin/anbox
+  anbox:
+    command: bin/anbox-wrapper.sh
+  container-manager:
+    command: bin/anbox-wrapper.sh container-manager
+    # daemon: simple
+  setup-rootfs:
+    command: bin/setup-rootfs.sh
+  shell:
+    command: bin/container-shell.sh
+  sh:
+    command: bin/shell.sh
+  start-container:
+    command: bin/start-container.sh
 
 parts:
-    anbox:
-        plugin: cmake
-        source: .
-        configflags:
-          # FIXME: Anbox currently has some paths with hard coded prefixes. Once
-          # that is fixed we can avoid using a prefix here.
-          - -DCMAKE_INSTALL_PREFIX:PATH=/usr
-          # FIXME: When building in release mode we get a lot of error which cause
-          # the build to fail.
-          - -DCMAKE_BUILD_TYPE=debug
-        build-packages:
-          - build-essential
-          - cmake
-          - cmake-data
-          - debhelper
-          - dbus
-          - google-mock
-          - libboost-dev
-          - libboost-filesystem-dev
-          - libboost-log-dev
-          - libboost-iostreams-dev
-          - libboost-program-options-dev
-          - libboost-system-dev
-          - libboost-thread-dev
-          - libcap-dev
-          - libdbus-1-dev
-          - libdbus-cpp-dev
-          - libegl1-mesa-dev
-          - libgles2-mesa-dev
-          - libglib2.0-dev
-          - libgtest-dev
-          - libprotobuf-dev
-          - pkg-config
-          - protobuf-compiler
-        stage-packages:
-          - lxc1
-        snap:
-          - usr/bin/anbox
-          - usr/bin/anbox-container
-          - usr/bin/lxc-usernsexec
-          - usr/lib/*-linux-*/
+  android-rootfs:
+    plugin: dump
+    source: .
+    snap:
+      - anbox-android-rootfs.tar
+  anbox-common:
+    plugin: dump
+    source: .
+    organize:
+      scripts/snap-wrapper.sh: bin/anbox-wrapper.sh
+      scripts/setup-rootfs.sh: bin/setup-rootfs.sh
+      scripts/container-shell.sh: bin/container-shell.sh
+      scripts/shell.sh: bin/shell.sh
+      scripts/start-container.sh: bin/start-container.sh
+    snap:
+      - bin/anbox-wrapper.sh
+      - bin/setup-rootfs.sh
+      - bin/container-shell.sh
+      - bin/shell.sh
+      - bin/start-container.sh
+  lxc:
+    source: git://github.com/morphis/lxc
+    source-branch: snappy-support
+    build-packages:
+      - libapparmor-dev
+      - libcap-dev
+      - libgnutls28-dev
+      - libseccomp-dev
+      - pkg-config
+    plugin: autotools
+    configflags:
+      - --disable-selinux
+      - --disable-python
+      - --disable-lua
+      - --disable-tests
+      - --disable-examples
+      - --disable-doc
+      - --disable-api-docs
+      - --disable-bash
+      - --disable-cgmanager
+      # FIXME: Enable again once stacked AppArmor support landed
+      - --disable-apparmor
+      - --disable-seccomp
+      - --enable-capabilities
+      - --with-rootfs-path=/var/snap/anbox/common/lxc/
+    snap:
+      - bin/lxc-attach
+      - bin/lxc-ls
+      - bin/lxc-start
+      - bin/lxc-stop
+      - lib/liblxc.so.1
+      - lib/liblxc.so.1.2.0
+      - libexec/lxc/lxc-monitord
+  anbox:
+    plugin: cmake
+    after:
+      - lxc
+    source: .
+    configflags:
+      # FIXME: Anbox currently has some paths with hard coded prefixes. Once
+      # that is fixed we can avoid using a prefix here.
+      - -DCMAKE_INSTALL_PREFIX:PATH=/usr
+      # FIXME: When building in release mode we get a lot of error which cause
+      # the build to fail.
+      - -DCMAKE_BUILD_TYPE=debug
+    build-packages:
+      - build-essential
+      - cmake
+      - cmake-data
+      - debhelper
+      - dbus
+      - google-mock
+      - libboost-dev
+      - libboost-filesystem-dev
+      - libboost-log-dev
+      - libboost-iostreams-dev
+      - libboost-program-options-dev
+      - libboost-system-dev
+      - libboost-thread-dev
+      - libcap-dev
+      - libdbus-1-dev
+      - libdbus-cpp-dev
+      - libegl1-mesa-dev
+      - libgles2-mesa-dev
+      - libglib2.0-dev
+      - libgtest-dev
+      - libprotobuf-dev
+      - libsdl2-dev
+      - pkg-config
+      - protobuf-compiler
+    stage-packages:
+      - libegl1-mesa
+      - libgles2-mesa
+      - libgl1-mesa-glx
+      - libsdl2-2.0-0
+      - libsdl2-gfx-1.0-0
+    snap:
+      - usr/bin/anbox
+      - usr/lib/*-linux-*/
