Import EGL/GLES translator

--- a/external/android-emugl/host/libs/CMakeLists.txt
+++ b/external/android-emugl/host/libs/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(GLESv2_dec)
 add_subdirectory(libOpenGLESDispatch)
 add_subdirectory(libOpenglRender)
 add_subdirectory(renderControl_dec)
+add_subdirectory(Translator)
