Add initial hwcomposer implementation

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -22,18 +22,26 @@ target_link_libraries(anboxd
     pthread
     process-cpp
     anbox-protobuf)
+
+set(TEST_PLATFORM_SERVICE
+    service/test_platform_service.cpp)
+
+add_executable(test_platform_service ${TEST_PLATFORM_SERVICE})
+
+set(HWCOMPOSER_SOURCES
+    hwcomposer/hwcomposer.cpp)
+
+add_library(hwcomposer.anbox SHARED ${HWCOMPOSER_SOURCES})
+
 # As we're adding Android specific bits in this project we can't
 # build this safely within default build anymore. We keep this
 # for easy integration into used IDEs.
 set_target_properties(anboxd
     PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
 
-set(TEST_PLATFORM_SERVICE
-    service/test_platform_service.cpp)
-
-add_executable(test_platform_service ${TEST_PLATFORM_SERVICE})
-# As we're adding Android specific bits in this project we can't
-# build this safely within default build anymore. We keep this
-# for easy integration into used IDEs.
 set_target_properties(test_platform_service
     PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
+
+set_target_properties(hwcomposer.anbox
+    PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
+
