--- a/external/android-emugl/host/libs/Translator/GLES_CM/CMakeLists.txt
+++ b/external/android-emugl/host/libs/Translator/GLES_CM/CMakeLists.txt
@@ -6,3 +6,7 @@ set(SOURCES
 
 add_library(GLES_CM_translator SHARED ${SOURCES})
 target_link_libraries(GLES_CM_translator GLcommon)
+
+install(
+  TARGETS GLES_CM_translator
+  LIBRARY DESTINATION ${ANBOX_TRANSLATOR_INSTALL_DIR})
