--- a/external/android-emugl/host/libs/renderControl_dec/renderControl.in
+++ b/external/android-emugl/host/libs/renderControl_dec/renderControl.in
@@ -27,3 +27,11 @@ GL_ENTRY(int, rcOpenColorBuffer2, uint32_t colorbuffer)
 GL_ENTRY(uint32_t, rcCreateClientImage, uint32_t context, EGLenum target, GLuint buffer)
 GL_ENTRY(int, rcDestroyClientImage, uint32_t image)
 GL_ENTRY(void, rcSelectChecksumCalculator, uint32_t newProtocol, uint32_t reserved)
+GL_ENTRY(int, rcGetNumDisplays)
+GL_ENTRY(int, rcGetDisplayWidth, uint32_t displayId)
+GL_ENTRY(int, rcGetDisplayHeight, uint32_t displayId)
+GL_ENTRY(int, rcGetDisplayDpiX, uint32_t displayId)
+GL_ENTRY(int, rcGetDisplayDpiY, uint32_t displayId)
+GL_ENTRY(int, rcGetDisplayVsyncPeriod, uint32_t displayId)
+GL_ENTRY(void, rcPostLayer, const char* name, uint32_t colorBuffer, int32_t sourceCropLeft, int32_t sourceCropTop, int32_t sourceCropRight, int32_t sourceCropBottom, int32_t displayFrameLeft, int32_t displayFrameTop, int32_t displayFrameRight, int32_t displayFrameBottom)
+GL_ENTRY(void, rcPostAllLayersDone)
