emugl: update cmake configuration with missing files

--- a/external/android-emugl/shared/OpenglCodecCommon/CMakeLists.txt
+++ b/external/android-emugl/shared/OpenglCodecCommon/CMakeLists.txt
@@ -1,6 +1,15 @@
 set(SOURCES
-    glUtils.cpp
     ChecksumCalculator.cpp
-    ChecksumCalculatorThreadInfo.cpp)
+    ChecksumCalculator.h
+    ChecksumCalculatorThreadInfo.cpp
+    ChecksumCalculatorThreadInfo.h
+    CMakeLists.txt
+    ErrorLog.h
+    gl_base_types.h
+    GLDecoderContextData.h
+    glUtils.cpp
+    glUtils.h
+    Makefile
+    ProtocolUtils.h)
 
 add_library(OpenglCodecCommon ${SOURCES})
