Add display manager instance which hands relevant information to emugl layer

--- a/external/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
+++ b/external/android-emugl/host/libs/libOpenglRender/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCES
     ColorBuffer.cpp
+    DisplayManager.cpp
     FbConfig.cpp
     FrameBuffer.cpp
     LayerManager.cpp
+    NativeSubWindow.h
     NativeSubWindow_delegate.cpp
     ReadBuffer.cpp
     RenderContext.cpp
